# django-vue-auth-demo

./: .flake8  .gitignore  README.md  package.json  pyproject.toml  tailwind.config.js  vue.config.js
backend/: adapters.py  settings.py  urls.py  views.py
backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/posts/: models.py  permissions.py  serializers.py  views.py
backend/posts/migrations/: 0001_initial.py
instagram_clone/: manage.py
instagram_clone/instagram_clone/: asgi.py  settings.py  urls.py  wsgi.py
public/: index.html
src/: App.vue  main.js
src/router/: index.js
src/store/: index.js
src/views/: Login.vue  PostDetail.vue  PostUpdate.vue  Signup.vue  SubmitPost.vue
